# glTF2-loader

./: .editorconfig  AUTHORS  CMakeLists.txt  LICENSE  README.md
include/: Exceptions.hpp  glTF2.hpp
include/gltf2/: Exceptions.hpp  glTF2.hpp
src/: glTF2.cpp
src/gltf2/: glTF2.cpp
test/: CMakeLists.txt  basic.cpp
